# IndexOramCoDesign

./: .gitignore  README.md
backend/: Makefile  README.md
backend/app/: Cargo.toml  Enclave_u.c  Enclave_u.h  build.rs
backend/app/src/: app_state.rs  config.rs  crypto.rs  enclave_helper.rs  file_interface.rs  helpers.rs  json_interface.rs  logger.rs  main.rs  oblivious_ram.rs  oram_interface.rs  plotter.rs  preparation.rs
backend/enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Enclave_t.c  Enclave_t.h  Makefile  x86_64-unknown-linux-sgx.json
backend/enclave/src/: config.rs  crypto.rs  data_management.rs  enclave_caches.rs  enclave_state.rs  helpers.rs  index_locality_cache.rs  lib.rs  logger.rs  micro_benchmark.rs  oblivious_data_structures.rs  oblivious_ram.rs  obt_stash.rs  oram_interface.rs  packet_stash.rs  preparation.rs  query_response_cache.rs  query_state.rs  query_state_cache.rs  slot_cache.rs  sql_engine.rs  test_enclave.rs  test_oram.rs  utils.rs  workloads.rs
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js  Backup.js  Experiment.js  Home.js  NoMatch.js  Statistics.js
frontend/src/assets/: experiment_request.json
frontend/src/components/: ExperimentRequestTable.js  Layout.js  NavigationBar.js  WorkloadView.js
