[package]
name = "app"
version = "1.0.0"
authors = ["Teaclave"]
build = "build.rs"
edition = "2018"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
#serde_json = "1.0"
bincode = "1.2.1"
serde_bytes = "0.11"
rayon = "1.5.1"
indicatif = "0.16.2"
rand = "0.8.4"
chrono = "0.4"
lazy_static = "1.4.0"
memmap2 = "0.5.3"
actix-web = "4"
actix-cors = "0.6.1"
actix-files = "0.6.0"
plotters = "^0.3.1"
# For plotters:
# sudo apt install cmake
# sudo apt-get install libfontconfig libfontconfig1-dev

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { path = "../../../incubator-teaclave-sgx-sdk/sgx_alloc" }
#sgx_tstd = { path = "../../../incubator-teaclave-sgx-sdk/sgx_tstd" }