[package]
name = "template"
version = "1.0.0"
authors = ["The Teaclave Authors"]

[lib]
name = "sample" # Library name. If you change this, please reflect those changes in the Makefile on the variable ENCLAVE_CARGO_LIB
crate-type = ["staticlib"]

[features]
default = []

[profile.release]
lto = true

[target.'cfg(not(target_env = "sgx"))'.dependencies] # You can remove what you don't need, except types and tstd
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }
sgx_alloc = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_unwind = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_serialize = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dependencies]
crc32fast = { git = "https://github.com/mesalock-linux/rust-crc32fast-sgx.git" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", features = ["derive"] }
serde_bytes = { git = "https://github.com/mesalock-linux/serde-bytes-sgx.git" }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx.git" }
chrono = { git = "https://github.com/mesalock-linux/chrono-sgx.git" }
rand = { git = "https://github.com/mesalock-linux/rand-sgx.git" }
bincode = { git = "https://github.com/mesalock-linux/bincode-sgx.git" }
sha2 = { git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx.git" }
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }
ring = { git = "https://github.com/mesalock-linux/ring-sgx.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { path = "../../../incubator-teaclave-sgx-sdk/sgx_alloc" }
sgx_build_helper = { path = "../../../incubator-teaclave-sgx-sdk/sgx_build_helper" }
sgx_cov = { path = "../../../incubator-teaclave-sgx-sdk/sgx_cov" }
sgx_crypto_helper = { path = "../../../incubator-teaclave-sgx-sdk/sgx_crypto_helper" }
sgx_libc = { path = "../../../incubator-teaclave-sgx-sdk/sgx_libc" }
sgx_rand = { path = "../../../incubator-teaclave-sgx-sdk/sgx_rand" }
sgx_rand_derive = { path = "../../../incubator-teaclave-sgx-sdk/sgx_rand_derive" }
sgx_serialize = { path = "../../../incubator-teaclave-sgx-sdk/sgx_serialize" }
sgx_serialize_derive = { path = "../../../incubator-teaclave-sgx-sdk/sgx_serialize_derive" }
sgx_serialize_derive_internals = { path = "../../../incubator-teaclave-sgx-sdk/sgx_serialize_derive_internals" }
sgx_tcrypto = { path = "../../../incubator-teaclave-sgx-sdk/sgx_tcrypto" }
sgx_tcrypto_helper = { path = "../../../incubator-teaclave-sgx-sdk/sgx_tcrypto_helper" }
sgx_tdh = { path = "../../../incubator-teaclave-sgx-sdk/sgx_tdh" }
sgx_tkey_exchange = { path = "../../../incubator-teaclave-sgx-sdk/sgx_tkey_exchange" }
sgx_tprotected_fs = { path = "../../../incubator-teaclave-sgx-sdk/sgx_tprotected_fs" }
sgx_trts = { path = "../../../incubator-teaclave-sgx-sdk/sgx_trts" }
sgx_tse = { path = "../../../incubator-teaclave-sgx-sdk/sgx_tse" }
sgx_tseal = { path = "../../../incubator-teaclave-sgx-sdk/sgx_tseal" }
sgx_tstd = { path = "../../../incubator-teaclave-sgx-sdk/sgx_tstd" }
sgx_tunittest = { path = "../../../incubator-teaclave-sgx-sdk/sgx_tunittest" }
sgx_types = { path = "../../../incubator-teaclave-sgx-sdk/sgx_types" }
sgx_ucrypto = { path = "../../../incubator-teaclave-sgx-sdk/sgx_ucrypto" }
sgx_unwind = { path = "../../../incubator-teaclave-sgx-sdk/sgx_unwind" }
sgx_urts = { path = "../../../incubator-teaclave-sgx-sdk/sgx_urts" }